# RedEx

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
RedEx/: __init__.py
RedEx/data/: __init__.py  featuriser.py  transforms.py
RedEx/models/: __init__.py  base.py  dmpnn.py  gat.py  gcn.py  gin.py  readouts.py  sage.py
RedEx/utils/: __init__.py  training.py
configs/: finetune_gat.yaml  pretrain_dmpnn.yaml  pretrain_gat.yaml  pretrain_gcn.yaml  pretrain_gin.yaml  pretrain_graphsage.yaml
data/: Experimental_redox_potentials.csv
data/raw/: RedoxDB_Complete.csv
scripts/: finetune.py  predict.py  pretrain.py
weights/finetuned/gat_partial/: ensemble_metadata.pth  fold1_model.pth  fold2_model.pth  fold3_model.pth  fold4_model.pth  fold5_model.pth
weights/pretrained/: dmpnn_full_pretrain.pth  gat_full_pretrain.pth  gcn_full_pretrain.pth  gin_full_pretrain.pth  graphsage_full_pretrain.pth
